<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        tools:context="MainActivity">


        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/sonic_question" />

        <EditText
            android:id="@+id/sonic_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/text_field_text"
            android:inputType="textCapWords"
            android:maxLength="6" />


        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/kojima_question" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/kojima_radio_button"
                style="@style/RadioAndCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/kojima_button"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/molyneux_radio_button"
                style="@style/RadioAndCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/Molyneux_button"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/naka_radio_button"
                style="@style/RadioAndCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/Naka_button"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/sega_console_question" />

        <CheckBox
            android:id="@+id/mega_drive_checkbox"
            style="@style/RadioAndCheckboxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/mega_drive_checkbox"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/saturn_checkbox"
            style="@style/RadioAndCheckboxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/saturn_checkbox"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/jaguar_checkbox"
            style="@style/RadioAndCheckboxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp"
            android:text="@string/jaguar_checkbox"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/halo_question" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/gamecube_radio_button"
                style="@style/RadioAndCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/gamecube_button"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/xbox_radio_button"
                style="@style/RadioAndCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="24dp"
                android:text="@string/xbox_button"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/playstation_radio_button"
                style="@style/RadioAndCheckboxTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingLeft="24dp"
                android:text="@string/playstation_button"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            style=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/dreamcast_question" />

        <EditText
            android:id="@+id/dreamcast_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/text_field_text"
            android:inputType="textCapWords"
            android:maxLength="9" />


        <Button
            android:id="@+id/score_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="checkScore"
            android:text="@string/score_button" />

    </LinearLayout>
</ScrollView>